Suppression de la fonctionnalite grunt de publication sur github

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -2,10 +2,8 @@
   "generator-reveal": {
     "presentationTitle": "Cassandra",
     "packageVersion": "0.0.1",
-    "revealTheme": "beige",
+    "revealTheme": "solarized",
     "useSass": false,
-    "deployToGithubPages": true,
-    "githubUsername": "elebeaup",
-    "githubRepository": "https://github.com/elebeaup/cassandra-presentation"
+    "deployToGithubPages": false
   }
 }
